# fastapi_blog

./: .gitignore  README.md  pyproject.toml
src/fastapi_blog/: main.py
src/scripts/: dev.py
