[project]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
]

[tool.poetry]
packages = [{include = "fastapi_blog", from = "src"}, { include = "scripts", from = "src" }]

[tool.poetry.scripts]
dev = "scripts.dev:main"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
